Aggiunge alcune cose come exceptions e servizzi

--- a/src/main/resources/templates/show-product.html
+++ b/src/main/resources/templates/show-product.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Il prodotto più bello della nostra azienda</title>
-</head>
-<body>
-  <h1>
-    Il prodotto più bello della nostra azienda
-  </h1>
-  <p>
-    Un prodotto bellissimo.
-  </p>
-<p th:text="${product.productId}">
-
-</p>
-  <p th:text="${product.productName}">
-
-  </p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Il prodotto più bello della nostra azienda</title>
+    </head>
+    <body>
+        <h1>
+            Il prodotto più bello della nostra azienda
+        </h1>
+        <p>
+            Un prodotto bellissimo.
+        </p>
+        <p th:text="${product.productId}"></p>
+        <p th:text="${product.productName}"></p>
+    </body>
 </html>
