--- a/src/main/resources/templates/show-product.html
+++ b/src/main/resources/templates/show-product.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">//th è un alias standard e utilizzato.
 <head>
     <meta charset="UTF-8">
     <title>Il prodotto più bello della nostra azienda</title>
 </head>
 <body>
-  <h1>
-    Il prodotto più bello della nostra azienda
-  </h1>
-  <p>
-    Un prodotto bellissimo.
-  </p>
-<p th:text="${product.productId}">
-
+    <h1>
+        Il prodotto più bello della nostra azienda
+    </h1>
+    <p>
+        Un prodotto bellissimo.
+        </p>
+    <p th:text="${product.productId}">
+        </p>
+    <p th:text="${product.productName}">
 </p>
-  <p th:text="${product.productName}">
-
-  </p>
 </body>
 </html>
