Inizia l'implementazione di JPA/Hibernate

--- a/src/main/resources/templates/show-product.html
+++ b/src/main/resources/templates/show-product.html
@@ -5,17 +5,9 @@
     <title>Il prodotto più bello della nostra azienda</title>
 </head>
 <body>
-  <h1>
-    Il prodotto più bello della nostra azienda
-  </h1>
-  <p>
-    Un prodotto bellissimo.
-  </p>
-<p th:text="${product.productId}">
-
-</p>
-  <p th:text="${product.productName}">
-
-  </p>
+  <h1>Il prodotto più bello della nostra azienda</h1>
+  <p>Un prodotto bellissimo.</p>
+  <p th:text="${product.productId}"></p>
+  <p th:text="${product.productName}"></p>
 </body>
 </html>
