--- a/src/main/resources/templates/missing-product.html
+++ b/src/main/resources/templates/missing-product.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <title>Il prodotto richiesto non è disponibile</title>
 </head>
 <body>
-  <p>Prodotto inesistente, riprova</p>
+    <p>Prodotto inesistente, riprova</p>
 </body>
 </html>
