aggiunge metodi get e post per vedere e inserire prodotti

--- a/src/main/resources/templates/product/show-product.html
+++ b/src/main/resources/templates/product/show-product.html
@@ -11,11 +11,7 @@
   <p>
     Un prodotto bellissimo.
   </p>
-<p th:text="${product.productId}">
-
-</p>
-  <p th:text="${product.productName}">
-
-  </p>
+  <p th:text="${product.productId}"></p>
+  <p th:text="${product.productName}"></p>
 </body>
 </html>
