--- a/src/main/resources/templates/wrong.html
+++ b/src/main/resources/templates/wrong.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pagina di errore</title>
 </head>
 <body>
-
+    <h1>Error</h1>
 </body>
 </html>
