--- a/src/main/resources/templates/order/forms/show-search-form.html
+++ b/src/main/resources/templates/order/forms/show-search-form.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Show by customer id</title>
+        <style>
+            body {
+                background-image: url("https://i.imgur.com/tlqCddV.png");
+                background-repeat: repeat;
+                padding: auto;
+                }
+            form{
+                margin: auto;
+                width: 50%;
+                border-radius: 5px;
+                border: 3px solid black;
+                padding: 10px;
+                background-color: grey;
+            }
+        </style>
     </head>
     <body>
         <form th:action="@{/orders/byId}" method="get">
