--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -5,6 +5,50 @@
         <title>Title</title>
     </head>
     <body>
-        <table></table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Order ID</th>
+                    <th>Customer ID</th>
+                    <th>Employee ID</th>
+                    <th>Order Date</th>
+                    <th>Required Date</th>
+                    <th>Shipped Date</th>
+                    <th>Shipper ID</th>
+                    <th>Freights</th>
+                    <th>Shipper Name</th>
+                    <th>Ship Address</th>
+                    <th>Ship City</th>
+                    <th>Ship Region</th>
+                    <th>Ship Postal Code</th>
+                    <th>Ship Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="o : ${ordersByCustId}">
+                    <td>
+                        <form th:action="@{}" method="post">
+                            <input type="hidden" th:value="${o.orderId}">
+                            <button type="submit">
+                                Cancella
+                            </button>
+                        </form>
+                    </td>
+                    <td th:text="${o.orderId}"></td>
+                    <td th:text="${o.customer.custId}"></td>
+                    <td th:text="${o.employee.empId}"></td>
+                    <td th:text="${o.requiredDate}"></td>
+                    <td th:text="${o.shippedDate}"></td>
+                    <td th:text="${o.shipper.shipperId}"></td>
+                    <td th:text="${o.freight}"></td>
+                    <td th:text="${o.shipName}"></td>
+                    <td th:text="${o.shipAddress}"></td>
+                    <td th:text="${o.shipCity}"></td>
+                    <td th:text="${o.shipRegion}"></td>
+                    <td th:text="${o.shipPostalCode}"></td>
+                    <td th:text="${o.shipCountry}"></td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
