--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    </head>
+    <body>
+        <table>
+            <thead>
+                <tr>
+                    <th>Order Id</th>
+                    <th>Customer Id</th>
+                    <th>Employee Id</th>
+                    <th>Order Date</th>
+                    <th>Required Date</th>
+                    <th>Shipped Date</th>
+                    <th>Freights</th>
+                    <th>Shipper Name</th>
+                    <th>Shipper Address</th>
+                    <th>Ship City</th>
+                    <th>Ship Region</th>
+                    <th>Ship Postal Code</th>
+                    <th>Ship Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="o : ${orderByCustId}">
+                    <td>
+                        <form th:action="@{}" method="Post">
+                            <input type="hidden" th:value="${o.orderId}">
+                            <button type="submit">
+                                Cancella
+                            </button>
+                        </form>
+                    </td>
+                    <td th:text="${o.orderId}"></td>
+                    <td th:text="${o.customer.custId}"></td>
+                    <td th:text="${o.employee.empId}"></td>
+                    <td th:text="${o.requireDate}"></td>
+                    <td th:text="${o.shippedDate}"></td>
+                    <td th:text="${o.shipper.shipperDate}"></td>
+                    <td th:text="${o.freight}"></td>
+                    <td th:text="${o.shipName}"></td>
+                    <td th:text="${o.shipAddress}"></td>
+                    <td th:text="${o.shipCity}"></td>
+                    <td th:text="${o.shipRegion}"></td>
+                    <td th:text="${o.shipPostalCode}"></td>
+                    <td th:text="${o.shipCountry}"></td>
+                </tr>
+            </tbody>
+        </table>
+        <form>
 
-</body>
+        </form>
+    </body>
 </html>
