--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -28,7 +28,7 @@
                 <tr th:each="o : ${ordersByCustId}">
                     <td>
                         <form th:action="@{}" method="post">
-                            <input type="hidden" th:value="${o.orderId}">
+                            <input name="orderId" type="hidden" th:value="${o.orderId}">
                             <button type="submit">
                                 Cancella
                             </button>
