avemo finito l'esercizio

--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -27,7 +27,7 @@
             <tbody>
                 <tr th:each="o : ${ordersByCustId}">
                     <td>
-                        <form th:action="@{}" method="post">
+                        <form th:action="@{/delete-order}" method="post">
                             <input name="orderId" type="hidden" th:value="${o.orderId}">
                             <button type="submit">
                                 Cancella
