finisce il lavoro autonomo con tool che cerca e cancella ordini in base alla key: custid

--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -27,8 +27,8 @@
             <tbody>
                 <tr th:each="o : ${ordersByCustId}">
                     <td>
-                        <form th:action="@{}" method="post">
-                            <input type="hidden" th:value="${o.orderId}">
+                        <form th:action="@{/delete-order}" method="post">
+                            <input type="hidden" th:value="${o.orderId}" name="orderId">
                             <button type="submit">
                                 Cancella
                             </button>
