--- a/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
+++ b/src/main/resources/templates/order/forms/review-orders-by-customer-id.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <style>
+            body {
+                background-image: url('https://i.imgur.com/iUbLoGf.gif');
+                background-size:100%;
+                }
+            table{
+                background-color: grey 25%;
+            }
+        </style>
     </head>
     <body>
         <table>
