--- a/src/main/resources/templates/order/show-orders.html
+++ b/src/main/resources/templates/order/show-orders.html
@@ -1,41 +1,58 @@
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="it" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Show Orders</title>
+    <title>Show orders</title>
 </head>
 <body>
-    <h1>Gli ordini:</h1>
-    <table style="border: 1px solid black">
-        <thead>
-            <tr style="border: 1px solid black">
-                <th>Id</th>
-                <th>Customer Id</th>
-                <th>Employee id</th>
-                <th>Category id</th>
-                <th>Order Date</th>
-                <th>Required Date</th>
-                <th>Shipped Date</th>
-                <th>Shipper Id</th>
-                <th>Freight</th>
-                <th>Ship Name</th>
-                <th>Ship Address</th>
-                <th>Ship City</th>
-                <th>Ship Region</th>
-                <th>Ship PostalCode</th>
-                <th>Ship Country</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="o : ${orders}" style="border: 1px solid black">
-                <td th:text="${p.productId}">0000</td>
-                <td th:text="${p.productName}">XXXX</td>
-                <td th:text="${p.supplier.supplierId}">0000</td>
-                <td th:text="${p.category.categoryId}">0000</td>
-                <td th:text="${p.unitPrice}">00.00</td>
-                <td th:text="${p.discontinued}">0</td>
-            </tr>
-        </tbody>
-    </table>
+<h1>I nostri meravigliosi ordini</h1>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Customer Id</th>
+        <th>Employee id</th>
+        <th>Order Date</th>
+        <th>Required Date</th>
+        <th>Shipped Date</th>
+        <th>Shipper Id</th>
+        <th>Freight</th>
+        <th>Ship Name</th>
+        <th>Ship Address</th>
+        <th>Ship City</th>
+        <th>Ship Region</th>
+        <th>Ship PostalCode</th>
+        <th>Ship Country</th>
+        <th>Delete</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each = "o : ${orders}">
+        <td th:text="${o.orderId}">1000</td>
+        <td th:text="${o.customer.custId}">1000</td>
+        <td th:text="${o.employee.empId}">2000</td>
+        <td th:text="${o.orderDate}">20250508</td>
+        <td th:text="${o.requiredDate}">20250508</td>
+        <td th:text="${o.shippedDate}">20250508</td>
+        <td th:text="${o.shipper.shipperId}">0</td>
+        <td th:text="${o.freight}">0</td>
+        <td th:text="${o.shipName}">0</td>
+        <td th:text="${o.shipAddress}">0</td>
+        <td th:text="${o.shipCity}">0</td>
+        <td th:text="${o.shipRegion}">0</td>
+        <td th:text="${o.shipPostalCode}">0</td>
+        <td th:text="${o.shipCountry}">Not Found</td>
+        <td>
+            <form action="/delete-order" method="post">
+                <input type="hidden" th:value="${o.orderId}" name="orderId">
+                <input type="hidden" th:value="${o.customer.custId}" name="custId">
+                <button type="submit">Delete</button>
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
