finisce esercizio delete order

--- a/src/main/resources/templates/order/show-orders.html
+++ b/src/main/resources/templates/order/show-orders.html
@@ -24,30 +24,31 @@
     <th>Delete</th>
   </tr>
   </thead>
-  <form th:action="@{/delete-order}" method="post">
     <tbody style="border: 1px solid black">
     <tr th:each="o : ${orders}" style="border: 1px solid black">
-      <!--<td style="border: 1px solid black" th:text="${o.custContactName}"></td> -->
-      <td style="border: 1px solid black" th:text="${o.custContactName}"></td>
-      <td style="border: 1px solid black" th:text="${o.fullName}"></td>
-      <td style="border: 1px solid black" th:text="${o.requiredDate}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipperDate}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipperCompanyName}"></td>
-      <td style="border: 1px solid black" th:text="${o.freight}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipName}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipAddress}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipCity}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipRegion}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipPostalCode}"></td>
-      <td style="border: 1px solid black" th:text="${o.shipCountry}"></td>
-      <td style="border: 1px solid black">
+      <form th:action="@{/delete-order}" method="post">
 
-        <button type="submit" th:field="*{o.orderId}">Delete</button>
+        <td style="display: none"><input th:name="${'custId'}" th:value="${o.custId}"></td>
 
-      </td>
+        <td style="display: none"><input th:name="${'orderId'}" th:value="${o.orderId}"></td>
+        <td style="border: 1px solid black" th:text="${o.custContactName}"></td>
+        <td style="border: 1px solid black" th:text="${o.fullName}"></td>
+        <td style="border: 1px solid black" th:text="${o.requiredDate}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipperDate}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipperCompanyName}"></td>
+        <td style="border: 1px solid black" th:text="${o.freight}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipName}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipAddress}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipCity}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipRegion}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipPostalCode}"></td>
+        <td style="border: 1px solid black" th:text="${o.shipCountry}"></td>
+        <td style="border: 1px solid black">
+          <button type="submit">Delete</button>
+        </td>
+      </form>
   </tr>
   </tbody>
-  </form>
 </table>
 </body>
 </html>
