--- a/src/main/resources/templates/order/show-orders.html
+++ b/src/main/resources/templates/order/show-orders.html
@@ -6,30 +6,30 @@
 </head>
 <body>
 <h1>Orders</h1>
-<table style="border: 1px solid black">
-  <thead style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th>Customer</th>
-    <th>Employee</th>
-    <th>Required Date</th>
-    <th>Shipper Date</th>
-    <th>Shipper</th>
-    <th>Freight</th>
-    <th>Ship Name</th>
-    <th>Ship Address</th>
-    <th>Ship City</th>
-    <th>Ship Region</th>
-    <th>Ship CAP</th>
-    <th>Ship Country</th>
-    <th>Delete</th>
-  </tr>
-  </thead>
-    <tbody style="border: 1px solid black">
-    <tr th:each="o : ${orders}" style="border: 1px solid black">
-      <form th:action="@{/delete-order}" method="post">
 
-        <td style="display: none"><input th:name="${'custId'}" th:value="${o.custId}"></td>
+<form th:action="@{/delete-order}" method="post">
+  <input style="display: none" th:name="${'custId'}" th:value="${orders.getFirst().custId}">
 
+  <table style="border: 1px solid black">
+    <thead style="border: 1px solid black">
+    <tr style="border: 1px solid black">
+      <th>Customer</th>
+      <th>Employee</th>
+      <th>Required Date</th>
+      <th>Shipper Date</th>
+      <th>Shipper</th>
+      <th>Freight</th>
+      <th>Ship Name</th>
+      <th>Ship Address</th>
+      <th>Ship City</th>
+      <th>Ship Region</th>
+      <th>Ship CAP</th>
+      <th>Ship Country</th>
+      <th>Delete</th>
+    </tr>
+    </thead>
+      <tbody style="border: 1px solid black">
+      <tr th:each="o : ${orders}" style="border: 1px solid black">
         <td style="display: none"><input th:name="${'orderId'}" th:value="${o.orderId}"></td>
         <td style="border: 1px solid black" th:text="${o.custContactName}"></td>
         <td style="border: 1px solid black" th:text="${o.fullName}"></td>
@@ -46,9 +46,9 @@
         <td style="border: 1px solid black">
           <button type="submit">Delete</button>
         </td>
-      </form>
-  </tr>
-  </tbody>
-</table>
+    </tr>
+    </tbody>
+  </table>
+</form>
 </body>
 </html>
