--- a/src/main/resources/templates/product/forms/select-product-form.html
+++ b/src/main/resources/templates/product/forms/select-product-form.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color: grey">
         <header>
-            <h1>Seleziona il prodotto</h1>
+            <h6 style="background-color: red">Seleziona il prodotto</h6>
         </header>
         <a href="http://localhost:8080/product">
             vedi tutti i prodotti
